@@ -1,5 +1,5 @@
 /* server.c --- DIGEST-MD5 mechanism from RFC 2831, server side.
- * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010  Simon Josefsson
  *
  * This file is part of GNU SASL Library.
  *
@@ -320,12 +320,6 @@ _gsasl_digest_md5_server_step (Gsasl_session * sctx,
 
       *output_len = strlen (*output);
 
-      state->step++;
-      res = GSASL_NEEDS_MORE;
-      break;
-
-    case 2:
-      *output_len = 0;
       state->step++;
       res = GSASL_OK;
       break;
